fix for weird whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,13 @@ img, embed, object, video {
 }
 
 html, body, footer { margin: 0; padding: 0 }
+
+html {
+  overflow: hidden;
+    height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
